# aws-pricing-calculator-mcp

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt
.kiro/specs/pypi-publishing/: design.md  requirements.md  tasks.md
mcp_server/: tools.py
scripts/: calc_save.py  calc_utils.py
tests/: __init__.py  test_platform_agnostic_paths.py
